--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <script src="ts/index.ts" type="module"></script>
+  <link rel="stylesheet" href="css/styles.css">
   <title>GoT</title>
 </head>
 
 <body>
+  <div class="container"></div>
 
 </body>
 
